--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="menu_options">Options</string>
     <string name="favourites_title">Favourites</string>
     <string name="search_button">Search</string>
+    <string name="search_button_hint">Enter city name</string>
 </resources>
